--- a/SVX_Boost2x_Lung_D30.Rmd
+++ b/SVX_Boost2x_Lung_D30.Rmd
@@ -125,12 +125,12 @@ all_data <- all_data %>%
   filter(CFUs != "TNTC")
 
 all_data$group = factor(all_data$group, levels = c("Saline",
-            "BCG", "BCG + BCG", "IN", "IM", "Inulin", "CPG", "BCG + SolaVAX IN", "BCG + SolaVAX IM"))
+            "BCG 1x", "BCG + SolaVAX-IM-CpG 2x", "BCG + SolaVAX-IM-CpG + SolaVAX-IN-CPG", "BCG + SolaVAX-IM-AdVAX 2x", "BCG + SolaVAX-IM-AdVAX + SolaVAX-IN-AdVAX", "BCG + SolaVAX-IN-Laporte 2x", "BCG 2x"))
 
 # all_data <- all_data %>%
 #   mutate(group = recode(group,
-#                          "ID93" = "ID93+GLA-SE",
-#                          "BCG+ID93" = "BCG-ID93+GLA-SE"))
+#                          "old name" = "new name",
+#                          "old name" = "new name"))
 head(all_data)
 
 ```
@@ -149,7 +149,7 @@ level in the data:
 ```{r}
 #choose max cfu in each sample
 
-
+# 
 # tidy_cfu_data <- all_data %>%
 #   mutate(dilution = str_extract(dilution, "[0-9]+"),
 #          dilution = as.numeric(dilution)) %>%
@@ -164,12 +164,16 @@ tidy_cfu_data <- all_data %>%
   mutate(dilution = str_extract(dilution, "[0-9]+"),
          dilution = as.numeric(dilution)) %>%
   mutate(CFUs = as.numeric(CFUs)) %>%
-  filter(CFUs >= 2, CFUs <= 200) %>%
+  filter(CFUs >= 2, CFUs <= 120) %>%
+# filter(dilution == 5) %>%
   group_by(group, mouse, organ) %>%
-  slice(which.min(ifelse(CFUs >= 10 & CFUs <= 200, dilution, Inf))) %>%
+  slice(which.min(ifelse(CFUs >= 2 & CFUs <= 120, dilution, Inf))) %>% # which.min returns the index of the row with the minimum dilution value within the specified CFUs range
   ungroup()
 
-tidy_cfu_data
+
+
+
+
 ```
 
 
@@ -186,88 +190,104 @@ tidy_cfu_meta_joined <- inner_join(meta, tidy_cfu_data) %>%
          CFUs, CFUs_whole) %>% 
   ungroup()
 
+tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
+  filter(!(mouse == "D" & group == "BCG + SolaVAX-IM-AdVAX 2x"))
 
-tidy_cfu_meta_joined
-
+tidy_cfu_meta_joined 
 ```
 
 
 ```{r}
 
-female_df <- tidy_cfu_meta_joined %>%
-  filter(sex == "female")
-
-male_df <- tidy_cfu_meta_joined %>%
-  filter(sex == "male")
-
-# FEMALE ANOVA
-female_anova_result <- aov(log10(CFUs_whole) ~ group, data = female_df)
+# ANOVA
+anova_result <- aov(log10(CFUs_whole) ~ group, data = tidy_cfu_meta_joined)
 
 # Extract p-values from ANOVA
-female_p_values <- summary(female_anova_result)[["Pr(>F)"]]
+p_values <- summary(anova_result)[["Pr(>F)"]]
 
 # Perform Tukey's post hoc test for group comparisons
-female_tukey_result <- TukeyHSD(female_anova_result)
+tukey_result <- TukeyHSD(anova_result)
 
 # Extract p-values from Tukey's test
-female_p_values <- female_tukey_result[[1]][, "p adj"]
+p_values <- tukey_result[[1]][, "p adj"]
 
-female_p_values
+p_values
 # Specify the pairs of groups for significance bars
-female_significant_comparisons <- female_p_values < 0.05  # Example: using a significance level of 0.05
-female_significant_comparisons
+significant_comparisons <- p_values < 0.05  # Example: using a significance level of 0.05
+significant_comparisons
 
-# MALE ANOVA
-male_anova_result <- aov(log10(CFUs_whole) ~ group, data = male_df)
+# Create a data frame
+comparison_df <- data.frame(
+  p_value = p_values,
+  significant = significant_comparisons)
+comparison_df <- comparison_df %>% rownames_to_column("vaccine")
 
-# Extract p-values from ANOVA
-male_p_values <- summary(male_anova_result)[["Pr(>F)"]]
-
-# Perform Tukey's post hoc test for group comparisons
-male_tukey_result <- TukeyHSD(male_anova_result)
-
-# Extract p-values from Tukey's test
-male_p_values <- male_tukey_result[[1]][, "p adj"]
+comparison_df
 
 
-# Specify the pairs of groups for significance bars
-male_significant_comparisons <- male_p_values < 0.05  # Example: using a significance level of 0.05
-male_significant_comparisons
+# Create a function to add asterisks based on p-values
+add_asterisks <- function(p_value) {
+  if (p_value < 0.00009) {
+    return("****")
+  } else if (p_value < 0.0009) {
+    return("***")
+  } else if (p_value < 0.009) {
+    return("**")
+  } else if (p_value < 0.05) {
+    return("*")
+  } else {
+    return("ns")
+  }
+}
 
+# Add asterisks to the comparison_df
+comparison_df$`significance level` <- sapply(comparison_df$p_value, add_asterisks)
+
+# Display the updated comparison_df
+print(comparison_df)
+
+
+
+
+
+# Print the resulting data frame
+library(kableExtra)
+
+kable(comparison_df, caption = "Comparison Results", align = "c")
 ```
 
 
 ```{r}
-female_combined_df <- as.data.frame(female_p_values) %>%
-  rownames_to_column("group") %>%
-  left_join(as.data.frame(female_significant_comparisons) %>%
-              rownames_to_column("group"), by = "group")
-female_combined_df
-
-male_combined_df <- as.data.frame(male_p_values) %>%
-  rownames_to_column("group") %>%
-  left_join(as.data.frame(male_significant_comparisons) %>%
-              rownames_to_column("group"), by = "group")
-male_combined_df
-
-left_join(female_combined_df, male_combined_df, by = "group")
+# female_combined_df <- as.data.frame(female_p_values) %>%
+#   rownames_to_column("group") %>%
+#   left_join(as.data.frame(female_significant_comparisons) %>%
+#               rownames_to_column("group"), by = "group")
+# female_combined_df
+# 
+# male_combined_df <- as.data.frame(male_p_values) %>%
+#   rownames_to_column("group") %>%
+#   left_join(as.data.frame(male_significant_comparisons) %>%
+#               rownames_to_column("group"), by = "group")
+# male_combined_df
+# 
+# left_join(female_combined_df, male_combined_df, by = "group")
 ```
 
 
-```{r}
+```{r fig.height=5, fig.width=5}
 # tidy_cfu_meta_joined %>%
 #   ggplot(aes(x = group, y = log10(CFUs_whole), fill = group)) +
-#   geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black", cex = 1.5, position = position_dodge(width = .75)) + 
+#   geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black", cex = 1.5, position = position_dodge(width = .75)) +
 #   geom_boxplot(aes(fill = group), alpha = 0.3) +  scale_fill_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) + scale_color_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) +
 #   facet_wrap(~sex) +
-#   theme_bw() + 
+#   theme_bw() +
 #   theme(
 #     axis.text.x = element_blank(), # Remove X-axis names
 #     axis.text.y = element_text(size = 24),
 #     axis.title.x = element_blank(),
 #     axis.title.y = element_text(size = 14, face = "bold"),
 #     legend.position = "right", # Set legend position to right
-#     plot.title = element_blank()) + 
+#     plot.title = element_blank()) +
 #   theme(strip.text = element_text(size = 14, face = "bold")) +
 #   labs(
 #     title = paste0("SolaVAX Day 90 Lung CFU"),
@@ -277,28 +297,24 @@ left_join(female_combined_df, male_combined_df, by = "group")
 #   ylim(4, 7)
 
 
-ggplot(tidy_cfu_meta_joined, aes(x = group, y = log10(CFUs_whole), fill = group, color = group)) +
+ggplot(tidy_cfu_meta_joined, aes(x = group, y = log10(CFUs_whole), fill = group)) +#, color = group)) +
 geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black", 
            cex = 1.5, position = position_dodge(width = .75)) + 
   geom_boxplot(aes(fill = group), alpha = 0.3) + 
-  #facet_wrap(~ sex) + 
-  scale_fill_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) + 
-  scale_color_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) +
-  theme_bw() + 
+  theme_minimal() + 
   theme(
-        axis.text.x = element_blank(), # Remove X-axis names
+        axis.text.x = element_text(angle = 30, hjust = 1, size = 16), 
         axis.text.y = element_text(size = 16),
         axis.title.x = element_blank(),
         axis.title.y = element_text(size = 16, face = "bold"),
-        legend.text = element_text(size = 16), 
+        legend.text = element_text(size = 12), 
         legend.title = element_text(size = 16), 
         legend.key.size = unit(1, 'cm'), 
         plot.title = element_text(color="black", size=20, face="bold")) + 
   theme(strip.text = element_text(size=24, face = "bold")) +
-labs (y="Log10 CFU") +
-  ggtitle("Lung CFU") +
-  ylim(4, 7)
-
+labs (y="Log10 CFU", fill = "Vaccine") +
+  ggtitle("SolaVAX-TB 2x Boost Day 30 CFU") +
+  ylim(4.5, 7)
 ```
 
 
