--- a/SVX_Boost2x_Lung_D30.Rmd
+++ b/SVX_Boost2x_Lung_D30.Rmd
@@ -1,13 +1,13 @@
 ---
-title: "Svx D90 CFUs"
+title: "CFU Coding pipeline"
 author:
 - name: Pablo Maldonado
   affiliation: Colorado State University
-date: '2023-08-17'
+date: '2024-2-28'
 output:
   html_document: default
   word_document: default
-subtitle: Innate Immunity Pilot
+subtitle: CFU plotting 
 ---
 
 ```{r global options, echo=FALSE, warning=FALSE, message=FALSE}
