--- a/CFU_Pipeline_Spleen.Rmd
+++ b/CFU_Pipeline_Spleen.Rmd
@@ -63,7 +63,7 @@ library(ggpubr)
 
 ```{r}
 #Replace w/ path to CFU sheet
-path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/IMPACTB_CFU_BASE_Period_D56_Lung.xlsx")
+path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/IMPACTB_CFU_Op1_D56_Spleen.xlsx")
 
 
 sheet_names <- excel_sheets(path)
@@ -182,7 +182,7 @@ meta <- read_excel(path, sheet = "metadata")
 
 tidy_cfu_meta_joined <- inner_join(meta, tidy_cfu_data) %>%
   group_by(group) %>% 
-  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.33) %>%
+  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.50) %>%
   dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, dilution, sex, 
          CFUs, CFUs_whole) %>% 
   ungroup()
@@ -296,8 +296,8 @@ geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black",
         plot.title = element_text(color="black", size=20, face="bold")) + 
   theme(strip.text = element_text(size=24, face = "bold")) +
 labs (y="Log10 CFU") +
-  ggtitle("Lung CFU") +
-  ylim(4.5, 6)
+  ggtitle("Spleen D56 Option 1 CFU") +
+  ylim(3.7, 5.5)
 
 ```
 
