--- a/CFU_Pipeline_Lung.Rmd
+++ b/CFU_Pipeline_Lung.Rmd
@@ -361,7 +361,7 @@ ggplot(tidy_cfu_meta_joined, aes(x = day, y = log10(CFUs_whole), fill = group, c
 geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black", 
            cex = 1.5, position = position_dodge(width = .75)) + 
   geom_boxplot(aes(fill = group), alpha = 0.3) + 
-  #facet_wrap(~ sex) + 
+  facet_wrap(~ sex) + 
   scale_fill_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) + 
   scale_color_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) +
   theme_bw() + 
@@ -378,9 +378,9 @@ geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black",
         legend.title = element_text(size = 10), 
         legend.key.size = unit(1, 'cm'), 
         plot.title = element_text(color="black", size=16, face="bold")) + 
-  theme(strip.text = element_text(size=12, face = "bold")) +
+  theme(strip.text = element_text(size=16, face = "bold")) +
   labs (y="Log10 CFU") +
-  ggtitle("Option 1 Lung CFU") +
+  ggtitle("Base Period Lung CFU") +
   ylim(4.5, 6.5)
 
 ```
