--- a/CFU_Pipeline_Spleen.Rmd
+++ b/CFU_Pipeline_Spleen.Rmd
@@ -63,7 +63,7 @@ library(ggpubr)
 
 ```{r}
 #Replace w/ path to CFU sheet
-path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/IMPACTB_CFU_Op1_D56_Spleen.xlsx")
+path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/IMPAcTB_Spleen_Option1/IMPACTB_CFU_Op1_AllDays_Spleen.xlsx")
 
 
 sheet_names <- excel_sheets(path)
@@ -165,7 +165,7 @@ tidy_cfu_data <- all_data %>%
          dilution = as.numeric(dilution)) %>%
   mutate(CFUs = as.numeric(CFUs)) %>%
   filter(CFUs >= 1, CFUs <= 100) %>%
-  group_by(group, mouse, organ, sex) %>%
+  group_by(group, mouse, organ, sex, day) %>%
   slice(which.min(ifelse(CFUs >= 1 & CFUs <= 100, dilution, Inf))) %>%
   ungroup()
 
@@ -182,123 +182,206 @@ meta <- read_excel(path, sheet = "metadata")
 
 tidy_cfu_meta_joined <- inner_join(meta, tidy_cfu_data) %>%
   group_by(group) %>% 
-  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.50) %>%
-  dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, dilution, sex, 
+  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.5) %>%
+  dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, day, dilution, sex, 
          CFUs, CFUs_whole) %>% 
   ungroup()
 
 
-tidy_cfu_meta_joined
+tidy_cfu_meta_joined 
 
 ```
 
 
 ```{r}
-
-female_df <- tidy_cfu_meta_joined %>%
-  filter(sex == "female")
-
-male_df <- tidy_cfu_meta_joined %>%
-  filter(sex == "male")
-
-# FEMALE ANOVA
-female_anova_result <- aov(log10(CFUs_whole) ~ group, data = female_df)
-
-# Extract p-values from ANOVA
-female_p_values <- summary(female_anova_result)[["Pr(>F)"]]
-
-# Perform Tukey's post hoc test for group comparisons
-female_tukey_result <- TukeyHSD(female_anova_result)
-
-# Extract p-values from Tukey's test
-female_p_values <- female_tukey_result[[1]][, "p adj"]
-
-female_p_values
-# Specify the pairs of groups for significance bars
-female_significant_comparisons <- female_p_values < 0.05  # Example: using a significance level of 0.05
-female_significant_comparisons
-
-# MALE ANOVA
-male_anova_result <- aov(log10(CFUs_whole) ~ group, data = male_df)
-
-# Extract p-values from ANOVA
-male_p_values <- summary(male_anova_result)[["Pr(>F)"]]
-
-# Perform Tukey's post hoc test for group comparisons
-male_tukey_result <- TukeyHSD(male_anova_result)
-
-# Extract p-values from Tukey's test
-male_p_values <- male_tukey_result[[1]][, "p adj"]
-
-
-# Specify the pairs of groups for significance bars
-male_significant_comparisons <- male_p_values < 0.05  # Example: using a significance level of 0.05
-male_significant_comparisons
+# USE FOR INDIVIDUAL DAYS
+# female_df <- tidy_cfu_meta_joined %>%
+#   filter(sex == "female")
+# 
+# male_df <- tidy_cfu_meta_joined %>%
+#   filter(sex == "male")
+# 
+# # FEMALE ANOVA
+# female_anova_result <- aov(log10(CFUs_whole) ~ group, data = female_df)
+# 
+# # Extract p-values from ANOVA
+# female_p_values <- summary(female_anova_result)[["Pr(>F)"]]
+# 
+# # Perform Tukey's post hoc test for group comparisons
+# female_tukey_result <- TukeyHSD(female_anova_result)
+# 
+# # Extract p-values from Tukey's test
+# female_p_values <- female_tukey_result[[1]][, "p adj"]
+# 
+# female_p_values
+# # Specify the pairs of groups for significance bars
+# female_significant_comparisons <- female_p_values < 0.05  # Example: using a significance level of 0.05
+# female_significant_comparisons
+# 
+# # MALE ANOVA
+# male_anova_result <- aov(log10(CFUs_whole) ~ group, data = male_df)
+# 
+# # Extract p-values from ANOVA
+# male_p_values <- summary(male_anova_result)[["Pr(>F)"]]
+# 
+# # Perform Tukey's post hoc test for group comparisons
+# male_tukey_result <- TukeyHSD(male_anova_result)
+# 
+# # Extract p-values from Tukey's test
+# male_p_values <- male_tukey_result[[1]][, "p adj"]
+# 
+# 
+# # Specify the pairs of groups for significance bars
+# male_significant_comparisons <- male_p_values < 0.05  # Example: using a significance level of 0.05
+# male_significant_comparisons
 
 ```
 
 
 ```{r}
-female_combined_df <- as.data.frame(female_p_values) %>%
-  rownames_to_column("group") %>%
-  left_join(as.data.frame(female_significant_comparisons) %>%
-              rownames_to_column("group"), by = "group")
-female_combined_df
+# USE FOR INDIVIDUAL DAYS
+# female_combined_df <- as.data.frame(female_p_values) %>%
+#   rownames_to_column("group") %>%
+#   left_join(as.data.frame(female_significant_comparisons) %>%
+#               rownames_to_column("group"), by = "group")
+# female_combined_df
+# 
+# male_combined_df <- as.data.frame(male_p_values) %>%
+#   rownames_to_column("group") %>%
+#   left_join(as.data.frame(male_significant_comparisons) %>%
+#               rownames_to_column("group"), by = "group")
+# male_combined_df
+# 
+# left_join(female_combined_df, male_combined_df, by = "group")
+```
 
-male_combined_df <- as.data.frame(male_p_values) %>%
-  rownames_to_column("group") %>%
-  left_join(as.data.frame(male_significant_comparisons) %>%
-              rownames_to_column("group"), by = "group")
-male_combined_df
+```{r}
+# Filter data for day 14
+df_day_14 <- tidy_cfu_meta_joined %>% 
+              filter(day == 14)
 
-left_join(female_combined_df, male_combined_df, by = "group")
+# Separate by sex for day 14
+df_day_14_male <- df_day_14 %>% 
+                  filter(sex == "male")
+
+df_day_14_female <- df_day_14 %>% 
+                    filter(sex == "female")
+
+# Filter data for day 56
+df_day_56 <- tidy_cfu_meta_joined %>% 
+              filter(day == 56)
+
+# Separate by sex for day 56
+df_day_56_male <- df_day_56 %>% 
+                  filter(sex == "male")
+
+df_day_56_female <- df_day_56 %>% 
+                    filter(sex == "female")
+
+# Filter data for day 90
+df_day_90 <- tidy_cfu_meta_joined %>% 
+              filter(day == 90)
+
+# Separate by sex for day 90
+df_day_90_male <- df_day_90 %>% 
+                  filter(sex == "male")
+
+df_day_90_female <- df_day_90 %>% 
+                    filter(sex == "female")
+```
+
+```{r}
+# Day+sex T.test
+
+# Perform t-test between treatment and saline groups
+t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_14_male, subset = group %in% c("BCG", "Saline"))
+
+# Extract p-value from t-test result
+p_value_t_test <- t_test_result$p.value
+
+# Print the p-value
+print(p_value_t_test)
+
+# Perform t-test between treatment and saline groups
+t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_14_male, subset = group %in% c("ID93+GLA-SE", "Saline"))
+
+# Extract p-value from t-test result
+p_value_t_test <- t_test_result$p.value
+
+# Print the p-value
+print(p_value_t_test)
+
+# Perform t-test between treatment and saline groups
+t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_14_male, subset = group %in% c("BCG-ID93+GLA-SE", "Saline"))
+
+# Extract p-value from t-test result
+p_value_t_test <- t_test_result$p.value
+
+# Print the p-value
+print(p_value_t_test)
 ```
 
 
 ```{r}
-# tidy_cfu_meta_joined %>%
-#   ggplot(aes(x = group, y = log10(CFUs_whole), fill = group)) +
-#   geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black", cex = 1.5, position = position_dodge(width = .75)) + 
-#   geom_boxplot(aes(fill = group), alpha = 0.3) +  scale_fill_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) + scale_color_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) +
-#   facet_wrap(~sex) +
-#   theme_bw() + 
-#   theme(
-#     axis.text.x = element_blank(), # Remove X-axis names
-#     axis.text.y = element_text(size = 24),
-#     axis.title.x = element_blank(),
-#     axis.title.y = element_text(size = 14, face = "bold"),
-#     legend.position = "right", # Set legend position to right
-#     plot.title = element_blank()) + 
-#   theme(strip.text = element_text(size = 14, face = "bold")) +
-#   labs(
-#     title = paste0("SolaVAX Day 90 Lung CFU"),
-#     x = "Group",
-#     y = "Log10 Lung CFU",
-#     fill = "Group") +
-#   ylim(4, 7)
+# Day T.test
+
+# Perform t-test between treatment and saline groups
+t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_90, subset = group %in% c("BCG", "Saline"))
+
+# Extract p-value from t-test result
+p_value_t_test <- t_test_result$p.value
+
+# Print the p-value
+print(p_value_t_test)
+
+# Perform t-test between treatment and saline groups
+t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_90, subset = group %in% c("ID93+GLA-SE", "Saline"))
+
+# Extract p-value from t-test result
+p_value_t_test <- t_test_result$p.value
+
+# Print the p-value
+print(p_value_t_test)
+
+# Perform t-test between treatment and saline groups
+t_test_result <- t.test(log10(CFUs_whole) ~ group, data = df_day_90, subset = group %in% c("BCG-ID93+GLA-SE", "Saline"))
+
+# Extract p-value from t-test result
+p_value_t_test <- t_test_result$p.value
+
+# Print the p-value
+print(p_value_t_test)
+
+```
 
 
 
-ggplot(tidy_cfu_meta_joined, aes(x = group, y = log10(CFUs_whole), fill = group, color = group)) +
+```{r fig.width=5}
+ggplot(tidy_cfu_meta_joined, aes(x = day, y = log10(CFUs_whole), fill = group, color = group)) +
 geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black", 
            cex = 1.5, position = position_dodge(width = .75)) + 
-  geom_boxplot(aes(fill = group), alpha = 0.3) + facet_wrap(~ sex) + 
+  geom_boxplot(aes(fill = group), alpha = 0.3) + 
+  #facet_wrap(~ sex) + 
   scale_fill_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) + 
   scale_color_manual(values = c("red2", "olivedrab3", "green4",  "deepskyblue")) +
   theme_bw() + 
   theme(
-        axis.text.x = element_blank(), # Remove X-axis names
-        axis.text.y = element_text(size = 16),
-        axis.title.x = element_blank(),
-        axis.title.y = element_text(size = 16, face = "bold"),
-        legend.text = element_text(size = 16), 
-        legend.title = element_text(size = 16), 
+        #axis.text.x = element_blank(), # Remove X-axis names
+        axis.title.x = element_blank(),   
+        axis.text.x = element_text(size = 12),
+        #axis.title.x = element_text(size = 12, face = "bold"),
+        #axis.text.y = element_blank(), # Remove axis names
+        #axis.title.y = element_blank(), 
+        axis.text.y = element_text(size = 12),
+        axis.title.y = element_text(size = 12, face = "bold"),
+        legend.text = element_text(size = 10), 
+        legend.title = element_text(size = 10), 
         legend.key.size = unit(1, 'cm'), 
-        plot.title = element_text(color="black", size=20, face="bold")) + 
-  theme(strip.text = element_text(size=24, face = "bold")) +
-labs (y="Log10 CFU") +
-  ggtitle("Spleen D56 Option 1 CFU") +
-  ylim(3.7, 5.5)
+        plot.title = element_text(color="black", size=16, face="bold")) + 
+  theme(strip.text = element_text(size=16, face = "bold")) +
+  labs (y="Log10 CFU") +
+  ggtitle("Option 1 Spleen CFU") +
+  ylim(0, 6)
 
 ```
 
