--- a/SVX_Boost2x_Spleen_D30.Rmd
+++ b/SVX_Boost2x_Spleen_D30.Rmd
@@ -67,7 +67,7 @@ library(kableExtra)
 
 ```{r}
 #Replace w/ path to CFU sheet
-path <- c("//Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/SVX_Boost2X_Spleen_Day30_cfu_numbers.xlsx")
+path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/SVX_Boost2X_Lung_Day90_cfu_numbers.xlsx")
 
 sheet_names <- excel_sheets(path)
 sheet_names <- sheet_names[!sheet_names %in% c("metadata")]
@@ -179,7 +179,7 @@ tidy_cfu_data <- all_data %>%
   mutate(CFUs = as.numeric(CFUs)) %>%
   filter(CFUs >= 2, CFUs <= 120) %>%
   #filter(dilution == 5) %>%
-  filter(dilution %in% c(2, 3)) %>%
+  #filter(dilution %in% c(2, 3)) %>%
   group_by(group, mouse, organ) %>%
   slice(which.min(ifelse(CFUs >= 2 & CFUs <= 120, dilution, Inf))) %>% # which.min returns the index of the row with the minimum dilution value within the specified CFUs range
   ungroup()
@@ -347,8 +347,8 @@ geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black",
         plot.title = element_text(color="black", size=20, face="bold")) + 
   theme(strip.text = element_text(size=24, face = "bold")) +
 labs (y="Log10 CFU", fill = "Vaccine") +
-  ggtitle("SolaVAX-TB 2x Boost Day 30 Spleen CFU       Df:5   Plated 50% of organ") +
-  ylim(2.5, 5)
+  ggtitle("SolaVAX-TB 2x Boost Day 90 Lung CFU       Df:5   Plated 50% of organ") +
+  ylim(4, 7)
 ```
 
 
