--- a/SVX_Boost2x_Spleen_D30.Rmd
+++ b/SVX_Boost2x_Spleen_D30.Rmd
@@ -192,7 +192,7 @@ tidy_cfu_data <- all_data %>%
 
 meta <- read_excel(path, sheet = "metadata")
 
-tidy_cfu_meta_joined <- inner_join(meta, tidy_cfu_data) %>%
+spleenD30tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
   group_by(group) %>% 
   mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.50) %>%
   dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, dilution, 
@@ -205,7 +205,12 @@ tidy_cfu_meta_joined <- inner_join(meta, tidy_cfu_data) %>%
 # tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
 #   filter(!(mouse == "B" & group == "BCG 1x"))
 
-tidy_cfu_meta_joined 
+spleenD30tidy_cfu_meta_joined 
+
+write.csv(spleenD30tidy_cfu_meta_joined, "spleenD30tidy_cfu_meta_joined.csv", row.names = FALSE)
+
+# Print the dataframe
+spleenD30tidy_cfu_meta_joined
 ```
 
 
