--- a/CFU_Base-Pipeline_Spleen.Rmd
+++ b/CFU_Base-Pipeline_Spleen.Rmd
@@ -63,7 +63,7 @@ library(ggpubr)
 
 ```{r}
 #Replace w/ path to CFU sheet
-path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/IMPAcTB_Spleen_Option1/IMPACTB_CFU_Op1_AllDays_Spleen.xlsx")
+path <- c("/Volumes/rstor-henao_lab/Pablo/CFU_Pipeline/IMPAcTB_Spleen_Base/IMPACTB_CFU_Base_AllDays_Spleen.xlsx")
 
 
 sheet_names <- excel_sheets(path)
@@ -177,10 +177,11 @@ tidy_cfu_data
 # Calculating CFU/ml for every qualifying replicate between 10-75 CFUs. Column binding by organ name to the metadata sheet via inner_join().
 
 meta <- read_excel(path, sheet = "metadata")
-spleenoption1tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
+
+spleenbasetidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
   group_by(group) %>% 
-  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.50) %>%
-  dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, dilution, 
+  mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.33) %>%
+  dplyr::select(organ, count_date, day, who_plated, who_counted, group, sex, mouse, dilution, 
          CFUs, CFUs_whole) %>% 
   ungroup()
 
@@ -190,12 +191,11 @@ spleenoption1tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
 # tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
 #   filter(!(mouse == "B" & group == "BCG 1x"))
 
-spleenoption1tidy_cfu_meta_joined 
+spleenbasetidy_cfu_meta_joined
 
-write.csv(spleenoption1tidy_cfu_meta_joined, "spleenoption1tidy_cfu_meta_joined.csv", row.names = FALSE)
+write.csv(spleenbasetidy_cfu_meta_joined, "spleenbasetidy_cfu_meta_joined.csv", row.names = FALSE)
 
-# Print the dataframe
-spleenoption1tidy_cfu_meta_joined
+spleenbasetidy_cfu_meta_joined
 ```
 
 ## Calculate CFUs from best dilution/Estimate bacterial load for each sample based on good dilution
@@ -405,7 +405,7 @@ geom_point(size = 5, shape = 21, alpha = 0.8, na.rm = T, colour = "black",
   theme(strip.text = element_text(size=16, face = "bold")) +
   labs (y="Log10 CFU") +
   ggtitle("Option 1 Spleen CFU") +
-  ylim(0, 6)
+  ylim(0, 9)
 
 ```
 
