--- a/CFU_Op1-Pipeline_Spleen.Rmd
+++ b/CFU_Op1-Pipeline_Spleen.Rmd
@@ -177,6 +177,7 @@ tidy_cfu_data
 # Calculating CFU/ml for every qualifying replicate between 10-75 CFUs. Column binding by organ name to the metadata sheet via inner_join().
 
 meta <- read_excel(path, sheet = "metadata")
+
 spleenoption1tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
   group_by(group) %>% 
   mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.50) %>%
@@ -190,9 +191,9 @@ spleenoption1tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
 # tidy_cfu_meta_joined  <- tidy_cfu_meta_joined %>%
 #   filter(!(mouse == "B" & group == "BCG 1x"))
 
-spleenoption1tidy_cfu_meta_joined 
+spleenoption1tidy_cfu_meta_joined
 
-write.csv(spleenoption1tidy_cfu_meta_joined, "spleenoption1tidy_cfu_meta_joined.csv", row.names = FALSE)
+write.csv(spleenoption1tidy_cfu_meta_joined, "spleenoption1tidy_cfu_meta_joined", row.names = FALSE)
 
 # Print the dataframe
 spleenoption1tidy_cfu_meta_joined
