--- a/CFU_Op1-Pipeline_Spleen.Rmd
+++ b/CFU_Op1-Pipeline_Spleen.Rmd
@@ -181,7 +181,7 @@ meta <- read_excel(path, sheet = "metadata")
 spleenoption1tidy_cfu_meta_joined  <- inner_join(meta, tidy_cfu_data) %>%
   group_by(group) %>% 
   mutate(CFUs_whole = ((CFUs * dilution_factor^dilution/volume_plated_ml) * total_resuspension_mL)/.50) %>%
-  dplyr::select(organ, count_date, who_plated, who_counted, group,  mouse, dilution, 
+  dplyr::select(organ, count_date, who_plated, who_counted, group, sex, day, mouse, dilution, 
          CFUs, CFUs_whole) %>% 
   ungroup()
 
